# Simple-Calculator

./: Cargo.toml  calculator.rs  index.html  main.rs  style.css
